# leader-teleop

./: .gitignore  DEBUG_README.md  README.md  commands.py  data_0.csv  data_1.csv  data_2.csv  data_3.csv  data_rec_new.py  data_rec_newest.py  data_rec_old.py  data_recorder.py  factory.py  group_read.py  group_read_save.py  gsn.py  gstreamer_recorder.py  joint_angle_deltas.csv  joint_angles_log.csv  joint_trans_gripper.py  joint_trans_new.py  joint_transfer.py  list_devices.sh  max_speed.py  name_the_cans.sh  piper_ctrl_joint.py  pyproject.toml  read_joints.py  record.py  record_data.sh  robot_config.yaml  swap_cans.sh  test_robot.py  {self._output_file}
CH341SER_LINUX/: .ch34x.o.d
blue_thing/pick_20250527_113642/: data.csv
blue_thing/pick_20250527_113812/: data.csv
blue_thing/pick_20250527_113851/: data.csv
blue_thing/pick_20250527_113919/: data.csv
blue_thing/pick_20250527_113952/: data.csv
blue_thing/pick_20250527_114017/: data.csv
blue_thing/pick_20250527_114100/: data.csv
blue_thing/pick_20250527_114133/: data.csv
blue_thing/pick_20250527_114204/: data.csv
blue_thing/pick_20250527_120128/: data.csv
blue_thing/pick_20250527_120827/: data.csv
blue_thing/pick_20250527_120914/: data.csv
blue_thing/pick_20250527_120942/: data.csv
blue_thing/pick_20250527_121007/: data.csv
blue_thing/pick_20250527_121112/: data.csv
blue_thing/pick_20250527_121133/: data.csv
blue_thing/pick_20250527_123319/: data.csv
blue_thing/pick_20250527_123346/: data.csv
gripper-control/: decode.py  installRS485Driver.sh  read.py  send.py  sendMove.py
(+193 files in other folders)
